CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(mstcp)
add_definitions(-std=gnu++11)
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_FLAGS "-std=gnu++11")
set(CMAKE_BUILD_TYPE Release)

add_subdirectory(Network)
add_subdirectory(AudioModule)
add_subdirectory(VideoModule)
aux_source_directory(. SRC_LIST)

ADD_EXECUTABLE(mstcp ${SRC_LIST})
target_link_libraries(mstcp Network)
target_link_libraries(mstcp AudioModule)
target_link_libraries(mstcp VideoModule)
