CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(client)
#add_definitions(-std=gnu++11)
set(CMAKE_CXX_COMPILER "clang")
#set(CMAKE_CXX_FLAGS "-std=gnu++11")
set(CMAKE_BUILD_TYPE Debug)
#add_subdirectory(src)
aux_source_directory(. SRC_LIST)
ADD_EXECUTABLE(client ${SRC_LIST})
#target_link_libraries(hello Test)
