CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(client)
#add_definitions(-std=gnu++11)
set(CMAKE_CXX_COMPILER "clang")
#set(CMAKE_CXX_FLAGS "-std=gnu++11")
set(CMAKE_BUILD_TYPE Debug)
#add_subdirectory(src)

aux_source_directory(. SRC_LIST)
#target_link_libraries(hello Test)
get_filename_component(PARENT_DIR ${CMAKE_SOURCE_DIR} DIRECTORY)
set(LIB_DIR ${PARENT_DIR}/xlib/bin)
#message(STATUS "lib" ${LIB_DIR})
link_directories(${LIB_DIR})
add_executable(client ${SRC_LIST})
target_link_libraries(client xSocket)
