cmake_minimum_required(VERSION 2.6)
project(server)
#add_definitions(-std=gnu++11)
set(CMAKE_CXX_COMPILER "clang")
#set(CMAKE_CXX_FLAGS "-std=gnu++11")
set(CMAKE_BUILD_TYPE Release)

#add_subdirectory(VideoModule)
aux_source_directory(. SRC_LIST)

#target_link_libraries(MS_TCP VideoModule)
get_filename_component(PARENT_DIR ${CMAKE_SOURCE_DIR} DIRECTORY)
set(LIB_DIR ${PARENT_DIR}/xlib/bin)
#message(STATUS "lib" ${LIB_DIR})
link_directories(${LIB_DIR})
add_executable(server ${SRC_LIST})
#target_link_libraries(server /Users/xiejinbao/Documents/github/ms-tcp/unix_np/xlib/bin/libxSocket.a)
target_link_libraries(server libxSocket.a)
